--- a/EventManagmentAPI/EventManagmentAPI/appsettings.json
+++ b/EventManagmentAPI/EventManagmentAPI/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-HL3FMQU;Initial Catalog=EventDB;User Id=SQLServerLogin;Password=pass;TrustServerCertificate=True"
+    "DefaultConnection": "Data Source=DESKTOP-HL3FMQU;Initial Catalog=EventDB;Integrated Security=True;TrustServerCertificate=True;"
   }
 }
 
