--- a/EventManagmentAPI/EventManagmentAPI/appsettings.json
+++ b/EventManagmentAPI/EventManagmentAPI/appsettings.json
@@ -9,6 +9,6 @@
     "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-HL3FMQU;Initial Catalog=EventDB;Integrated Security=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Data Source=/*Paste your datebase server address here*/;Initial Catalog=EventDB;Integrated Security=True;TrustServerCertificate=True;"
   }
 }
