--- a/EventManagmentAPI/EventManagmentAPI/appsettings.Development.json
+++ b/EventManagmentAPI/EventManagmentAPI/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-HL3FMQU;Initial Catalog=EventDB;Integrated Security=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Data Source=/*Paste your database server address here*/;Initial Catalog=EventDB;Integrated Security=True;TrustServerCertificate=True;"
   }
 }
 
