--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,4 @@ FodyWeavers.xsd
 /IS6/quickstart/src/IdentityServer/keys/is-signing-key-1CA11CB04B6FC99760F4FAF44EFE4B3A.json
 /IS6/quickstart/src/IdentityServer/keys/is-signing-key-7CA33EAD8B63F60696AF1E13E2D0A7FF.json
 /IS6/quickstart/src/IdentityServer/keys/is-signing-key-B38D14CECB6C10FA2762C4DDDA7489FC.json
+/EventManagmentAPI/EventManagmentAPI/Dockerfile
